Bay rename and cleanup via IDEA CQL