@@ -1,17 +1,30 @@
 /*
- * MegaMekLab - Copyright (C) 2008
+ * Copyright (C) 2008 - jtighe (torren@users.sourceforge.net)
+ * Copyright (C) 2025 The MegaMek Team. All Rights Reserved.
  *
- * Original author - jtighe (torren@users.sourceforge.net)
+ * This file is part of MegaMekLab.
  *
- * This program is free software; you can redistribute it and/or modify it under
- * the terms of the GNU General Public License as published by the Free Software
- * Foundation; either version 2 of the License, or (at your option) any later
- * version.
+ * MegaMekLab is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License (GPL),
+ * version 3 or (at your option) any later version,
+ * as published by the Free Software Foundation.
  *
- * This program is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
- * details.
+ * MegaMekLab is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty
+ * of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ * See the GNU General Public License for more details.
+ *
+ * A copy of the GPL should have been included with this project;
+ * if not, see <https://www.gnu.org/licenses/>.
+ *
+ * NOTICE: The MegaMek organization is a non-profit group of volunteers
+ * creating free software for the BattleTech community.
+ *
+ * MechWarrior, BattleMech, `Mech and AeroTech are registered trademarks
+ * of The Topps Company, Inc. All Rights Reserved.
+ *
+ * Catalyst Game Labs and the Catalyst Game Labs logo are trademarks of
+ * InMediaRes Productions, LLC.
  */
 package megameklab.ui.fighterAero;
 
@@ -21,8 +34,6 @@ import java.awt.GridBagConstraints;
 import java.awt.GridBagLayout;
 import java.awt.Insets;
 import java.util.List;
-import java.util.stream.Collectors;
-
 import javax.swing.BorderFactory;
 import javax.swing.Box;
 import javax.swing.BoxLayout;
@@ -34,12 +45,20 @@ import javax.swing.SwingConstants;
 
 import megamek.codeUtilities.MathUtility;
 import megamek.common.*;
+import megamek.common.bays.Bay;
+import megamek.common.bays.BayData;
 import megamek.common.equipment.ArmorType;
-import megamek.common.verifier.BayData;
 import megamek.common.verifier.TestAero;
 import megamek.common.verifier.TestEntity;
 import megameklab.ui.EntitySource;
-import megameklab.ui.generalUnit.*;
+import megameklab.ui.generalUnit.ArmorAllocationView;
+import megameklab.ui.generalUnit.BasicInfoView;
+import megameklab.ui.generalUnit.FuelView;
+import megameklab.ui.generalUnit.HeatSinkView;
+import megameklab.ui.generalUnit.IconView;
+import megameklab.ui.generalUnit.MVFArmorView;
+import megameklab.ui.generalUnit.MovementView;
+import megameklab.ui.generalUnit.PatchworkArmorView;
 import megameklab.ui.generalUnit.summary.*;
 import megameklab.ui.listeners.AeroBuildListener;
 import megameklab.ui.listeners.ArmorAllocationListener;
@@ -89,20 +108,20 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
             panPatchwork.setVisible(false);
         }
         panSummary = new SummaryView(eSource,
-                new UnitTypeSummaryItem(),
-                new StructureSummaryItem(),
-                new EngineSummaryItem(),
-                new CockpitSummaryItem(),
-                new FuelSummaryItem(),
-                new HeatSinkSummaryItem(),
-                new ControlsSummaryItem(),
-                new ArmorSummaryItem(),
-                new WeaponsSummaryItem(),
-                new AmmoSummaryItem(),
-                new MiscEquipmentSummaryItem(),
-                new OtherSummaryItem());
+              new UnitTypeSummaryItem(),
+              new StructureSummaryItem(),
+              new EngineSummaryItem(),
+              new CockpitSummaryItem(),
+              new FuelSummaryItem(),
+              new HeatSinkSummaryItem(),
+              new ControlsSummaryItem(),
+              new ArmorSummaryItem(),
+              new WeaponsSummaryItem(),
+              new AmmoSummaryItem(),
+              new MiscEquipmentSummaryItem(),
+              new OtherSummaryItem());
 
-        GridBagConstraints gbc = new GridBagConstraints();
+        GridBagConstraints gbc;
 
         JPanel leftPanel = new JPanel();
         JPanel midPanel = new JPanel();
@@ -116,8 +135,6 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
         leftPanel.add(iconView);
         leftPanel.add(panChassis);
         leftPanel.add(panHeat);
-        //leftPanel.add(Box.createGlue());
-        //leftPanel.add(Box.createVerticalGlue());
 
         midPanel.add(panMovement);
         midPanel.add(panFuel);
@@ -202,18 +219,20 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
 
     /**
      * Calculates required engine rating for speed and tonnage and updates engine if possible.
+     *
      * @return true if the new engine is legal for rating, space, and tech level
      */
     private boolean recalculateEngineRating(int walkMP, double tonnage) {
-        int rating = TestAero.calculateEngineRating(getAero(), (int)tonnage, walkMP);
+        int rating = TestAero.calculateEngineRating(getAero(), (int) tonnage, walkMP);
         int oldRating = getAero().getEngine().getRating();
         if (oldRating != rating) {
             panChassis.setEngineRating(rating);
             Engine engine = panChassis.getEngine();
             if (!engine.engineValid || !panInfo.isLegal(engine)) {
-                JOptionPane.showMessageDialog(
-                        this, String.format("The required engine rating of %d exceeds the maximum.", rating),
-                        "Bad Engine", JOptionPane.ERROR_MESSAGE);
+                JOptionPane.showMessageDialog(this,
+                      String.format("The required engine rating of %d exceeds the maximum.", rating),
+                      "Bad Engine",
+                      JOptionPane.ERROR_MESSAGE);
                 panChassis.setEngineRating(oldRating);
                 return false;
             }
@@ -221,6 +240,10 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
         return true;
     }
 
+    /**
+     * @deprecated No indicated uses.
+     */
+    @Deprecated(since = "0.50.05", forRemoval = true)
     public void removeSystemCrits(int systemType) {
         for (int loc = 0; loc < getAero().locations(); loc++) {
             for (int slot = 0; slot < getAero().getNumberOfCriticals(loc); slot++) {
@@ -271,10 +294,9 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
     }
 
     /**
-     * Sets the structural integrity for Aerospace and Conventional fighters.
-     * For these units, the SI is equal to the safe thrust rating or 10% of the
-     * units tonnage, whichever is greater.  The SI for fighters does not take
-     * up any tonnage.
+     * Sets the structural integrity for Aerospace and Conventional fighters. For these units, the SI is equal to the
+     * safe thrust rating or 10% of the units tonnage, whichever is greater.  The SI for fighters does not take up any
+     * tonnage.
      */
     public void setAeroStructuralIntegrity() {
         int si = (int) Math.max(panChassis.getTonnage() * 0.1, panMovement.getWalk());
@@ -291,7 +313,7 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
         getAero().setChassis(chassis);
         refresh.refreshHeader();
         refresh.refreshPreview();
-        iconView.refresh();   
+        iconView.refresh();
     }
 
     @Override
@@ -346,14 +368,14 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
         } else if (!getTechManager().isLegal(panArmor.getArmor())) {
             UnitUtil.removeISorArmorMounts(getAero(), false);
         }
-        // If we have a large engine, a drop in tech level may make it unavailable and we will need
-        // to reduce speed to a legal value.
+        // If we have a large engine, a drop in tech level may make it unavailable, and we will need to reduce speed
+        // to a legal value.
         if (getAero().getEngine().hasFlag(Engine.LARGE_ENGINE) && panChassis.getAvailableEngines().isEmpty()) {
             int walk;
             if (getAero().isPrimitive()) {
-                walk = 400 / (int)(getAero().getWeight() * 1.2);
+                walk = 400 / (int) (getAero().getWeight() * 1.2);
             } else {
-                walk = 400 / (int)getAero().getWeight();
+                walk = 400 / (int) getAero().getWeight();
             }
             if (!panChassis.isConventional()) {
                 walk += 2;
@@ -361,9 +383,10 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
             recalculateEngineRating(walk, getAero().getWeight());
             getAero().setOriginalWalkMP(walk);
             panMovement.setFromEntity(getAero());
-            JOptionPane.showMessageDialog(
-                    this, String.format("Large engine not available at this tech level. Reducing MP to %d.", walk),
-                    "Bad Engine", JOptionPane.ERROR_MESSAGE);
+            JOptionPane.showMessageDialog(this,
+                  String.format("Large engine not available at this tech level. Reducing MP to %d.", walk),
+                  "Bad Engine",
+                  JOptionPane.ERROR_MESSAGE);
         }
         if (UnitUtil.checkEquipmentByTechLevel(getAero(), panInfo)) {
             refresh.refreshEquipment();
@@ -405,7 +428,7 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
 
     @Override
     public void heatSinkBaseCountChanged(int count) {
-        getAero().getEngine().setBaseChassisHeatSinks(Math.max(0,  count));
+        getAero().getEngine().setBaseChassisHeatSinks(Math.max(0, count));
         getAero().setPodHeatSinks(getAero().getHeatSinks() - count);
     }
 
@@ -461,8 +484,9 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
         double totalTonnage = getAero().getWeight();
         double remainingTonnage = TestEntity.floor(totalTonnage - currentTonnage, TestEntity.Ceil.HALFTON);
 
-        double maxArmor = MathUtility.clamp(getAero().getArmorWeight() + remainingTonnage, 0,
-                UnitUtil.getMaximumArmorTonnage(getAero()));
+        double maxArmor = MathUtility.clamp(getAero().getArmorWeight() + remainingTonnage,
+              0,
+              UnitUtil.getMaximumArmorTonnage(getAero()));
         getAero().setArmorTonnage(maxArmor);
         panArmor.removeListener(this);
         panArmor.setFromEntity(getAero());
@@ -523,8 +547,7 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
     @Override
     public void omniChanged(boolean omni) {
         getAero().setOmni(omni);
-        getAero().getEngine().setBaseChassisHeatSinks(
-                omni? Math.max(0, panHeat.getBaseCount()) : -1);
+        getAero().getEngine().setBaseChassisHeatSinks(omni ? Math.max(0, panHeat.getBaseCount()) : -1);
         panHeat.setFromAero(getAero());
         panTransport.setOmni(omni);
         refresh.refreshPreview();
@@ -540,11 +563,10 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
 
     @Override
     public void fighterTypeChanged(int type) {
-        if ((ASChassisView.TYPE_AEROSPACE == type)
-                && (getAero().getEntityType() != Entity.ETYPE_AERO)) {
+        if ((ASChassisView.TYPE_AEROSPACE == type) && (getAero().getEntityType() != Entity.ETYPE_AERO)) {
             eSource.createNewUnit(Entity.ETYPE_AERO, getAero());
-        } else if ((ASChassisView.TYPE_CONVENTIONAL == type)
-                && (getAero().getEntityType() != Entity.ETYPE_CONV_FIGHTER)) {
+        } else if ((ASChassisView.TYPE_CONVENTIONAL == type) &&
+                         (getAero().getEntityType() != Entity.ETYPE_CONV_FIGHTER)) {
             eSource.createNewUnit(Entity.ETYPE_CONV_FIGHTER, getAero());
         }
         refresh();
@@ -554,8 +576,7 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
     @Override
     public void engineChanged(Engine engine) {
         // Make sure we keep same number of base heat sinks for omnis
-        engine.setBaseChassisHeatSinks(getAero().getEngine()
-                .getBaseChassisHeatSinks(false));
+        engine.setBaseChassisHeatSinks(getAero().getEngine().getBaseChassisHeatSinks(false));
         getAero().setEngine(engine);
         panMovement.setFromEntity(getAero());
         panFuel.setFromEntity(getAero());
@@ -587,11 +608,12 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
      */
     @Override
     public void troopSpaceChanged(double fixed, double pod) {
-        List<Transporter> toRemove = getAero().getTransports().stream()
-            .filter(t -> t instanceof InfantryCompartment).collect(Collectors.toList());
+        List<Transporter> toRemove = getAero().getTransports()
+                                           .stream()
+                                           .filter(t -> t instanceof InfantryCompartment)
+                                           .toList();
         toRemove.forEach(t -> getAero().removeTransporter(t));
-        double troopTons = Math
-            .round((fixed) * 2) / 2.0;
+        double troopTons = Math.round((fixed) * 2) / 2.0;
         if (troopTons > 0) {
             getAero().addTransporter(new InfantryCompartment(troopTons), false);
         }
@@ -613,13 +635,12 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
      */
     @Override
     public void cargoSpaceChanged(BayData bayType, double fixed, double pod) {
-        List<Transporter> toRemove = getAero().getTransports().stream()
-            .filter(t -> (t instanceof Bay)
-                && (bayType == BayData.getBayType((Bay) t)))
-            .collect(Collectors.toList());
+        List<Transporter> toRemove = getAero().getTransports()
+                                           .stream()
+                                           .filter(t -> (t instanceof Bay) && (bayType == ((Bay) t).getBayData()))
+                                           .toList();
         toRemove.forEach(t -> getAero().removeTransporter(t));
-        double bayTons = Math
-            .round((fixed) * 2) / 2.0;
+        double bayTons = Math.round((fixed) * 2) / 2.0;
         int lastBay = getAero().getTransportBays().stream().mapToInt(Bay::getBayNumber).max().orElse(0);
         if (bayTons > 0) {
             getAero().addTransporter(bayType.newBay(bayTons, lastBay + 1), false);
@@ -675,13 +696,13 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
 
         // divide armor among positions, with more toward the front
         int points = TestEntity.getArmorPoints(getAero());
-        int nose = (int)Math.floor(points * 0.3);
-        int wing = (int)Math.floor(points * 0.25);
-        int aft = (int)Math.floor(points * 0.2);
+        int nose = (int) Math.floor(points * 0.3);
+        int wing = (int) Math.floor(points * 0.25);
+        int aft = (int) Math.floor(points * 0.2);
         int remainder = points - nose - wing - wing - aft;
 
         // spread remainder among nose and wings
-        switch(remainder % 4) {
+        switch (remainder % 4) {
             case 1:
                 nose++;
                 break;
@@ -712,10 +733,12 @@ public class ASStructureTab extends ITab implements AeroBuildListener, ArmorAllo
 
         int crits = armor.getPatchworkSlotsCVFtr();
         if (getAero().getEmptyCriticals(location) < crits) {
-            JOptionPane .showMessageDialog(null,
-                    String.format("%s does not fit in location %s. Resetting to Standard Armor in this location.",
-                            armor.getName(), getAero().getLocationName(location)),
-                    "Error", JOptionPane.INFORMATION_MESSAGE);
+            JOptionPane.showMessageDialog(null,
+                  String.format("%s does not fit in location %s. Resetting to Standard Armor in this location.",
+                        armor.getName(),
+                        getAero().getLocationName(location)),
+                  "Error",
+                  JOptionPane.INFORMATION_MESSAGE);
             getEntity().setArmorType(EquipmentType.T_ARMOR_STANDARD, location);
             getEntity().setArmorTechLevel(TechConstants.T_INTRO_BOXSET);
         } else {
