@@ -1,20 +1,29 @@
 /*
- * MegaMekLab
- * Copyright (C) 2019 The MegaMek Team
+ * Copyright (C) 2019-2025 The MegaMek Team. All Rights Reserved.
  *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; either version 2
- * of the License, or (at your option) any later version.
+ * This file is part of MegaMekLab.
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * MegaMekLab is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License (GPL),
+ * version 3 or (at your option) any later version,
+ * as published by the Free Software Foundation.
  *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+ * MegaMekLab is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty
+ * of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ * See the GNU General Public License for more details.
+ *
+ * A copy of the GPL should have been included with this project;
+ * if not, see <https://www.gnu.org/licenses/>.
+ *
+ * NOTICE: The MegaMek organization is a non-profit group of volunteers
+ * creating free software for the BattleTech community.
+ *
+ * MechWarrior, BattleMech, `Mech and AeroTech are registered trademarks
+ * of The Topps Company, Inc. All Rights Reserved.
+ *
+ * Catalyst Game Labs and the Catalyst Game Labs logo are trademarks of
+ * InMediaRes Productions, LLC.
  */
 package megameklab.ui.supportVehicle;
 
@@ -25,11 +34,16 @@ import java.awt.Insets;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
-
 import javax.swing.BorderFactory;
 import javax.swing.JPanel;
 
 import megamek.common.*;
+import megamek.common.bays.CrewQuartersCargoBay;
+import megamek.common.bays.EjectionSeatCargoBay;
+import megamek.common.bays.FirstClassQuartersCargoBay;
+import megamek.common.bays.PillionSeatCargoBay;
+import megamek.common.bays.StandardSeatCargoBay;
+import megamek.common.bays.SteerageQuartersCargoBay;
 import megamek.common.equipment.MiscMounted;
 import megamek.common.verifier.TestEntity;
 import megamek.common.verifier.TestSupportVehicle;
@@ -84,16 +98,16 @@ public class SVStructureTab extends ITab implements SVBuildListener {
         panCrew = new SVCrewView();
         iconView = new IconView();
         panSummary = new SummaryView(eSource,
-                new UnitTypeSummaryItem(),
-                new StructureSummaryItem(),
-                new EngineSummaryItem(),
-                new FuelSummaryItem(),
-                new HeatSinkSummaryItem(),
-                new ControlsSummaryItem(),
-                new ArmorSummaryItem(),
-                new TurretSummaryItem(),
-                new PowerAmplifierSummaryItem(),
-                new EquipmentSummaryItem());
+              new UnitTypeSummaryItem(),
+              new StructureSummaryItem(),
+              new EngineSummaryItem(),
+              new FuelSummaryItem(),
+              new HeatSinkSummaryItem(),
+              new ControlsSummaryItem(),
+              new ArmorSummaryItem(),
+              new TurretSummaryItem(),
+              new PowerAmplifierSummaryItem(),
+              new EquipmentSummaryItem());
 
         JPanel leftPanel = new JPanel();
         JPanel midPanel = new JPanel();
@@ -238,8 +252,7 @@ public class SVStructureTab extends ITab implements SVBuildListener {
 
     @Override
     public void updateTechLevel() {
-        getEntity().setTechLevel(panBasicInfo.getTechLevel()
-                .getCompoundTechLevel(panBasicInfo.useClanTechBase()));
+        getEntity().setTechLevel(panBasicInfo.getTechLevel().getCompoundTechLevel(panBasicInfo.useClanTechBase()));
         if (UnitUtil.checkEquipmentByTechLevel(getSV(), panBasicInfo)) {
             refresh.refreshEquipment();
         } else {
@@ -344,9 +357,7 @@ public class SVStructureTab extends ITab implements SVBuildListener {
     }
 
     /**
-     * Called when changing to or from large support vee, which may require
-     * instantiating
-     * a different Entity.
+     * Called when changing to or from large support vee, which may require instantiating a different Entity.
      */
     private void toggleLargeSupport() {
         // fixed wing/airship/satellite/VTOL do not change the number of locations
@@ -378,8 +389,8 @@ public class SVStructureTab extends ITab implements SVBuildListener {
                 eSource.createNewUnit(Entity.ETYPE_FIXED_WING_SUPPORT, getSV());
             } else if (type.equals(TestSupportVehicle.SVType.VTOL)) {
                 eSource.createNewUnit(Entity.ETYPE_SUPPORT_VTOL, getSV());
-            } else if (TestSupportVehicle.SVType.FIXED_WING.equals(oldType)
-                    || TestSupportVehicle.SVType.VTOL.equals(oldType)) {
+            } else if (TestSupportVehicle.SVType.FIXED_WING.equals(oldType) ||
+                             TestSupportVehicle.SVType.VTOL.equals(oldType)) {
                 eSource.createNewUnit(Entity.ETYPE_SUPPORT_TANK, getSV());
             }
             getSV().setMovementMode(type.defaultMovementMode);
@@ -405,10 +416,11 @@ public class SVStructureTab extends ITab implements SVBuildListener {
     @Override
     public void engineChanged(Engine engine) {
         getSV().setEngine(engine);
-        // Switching between maglev and non-maglev engines changes movement mode
+        // Switching between MagLev and non-MagLev engines changes movement mode
         if (TestSupportVehicle.SVType.RAIL.equals(TestSupportVehicle.SVType.getVehicleType(getSV()))) {
-            getSV().setMovementMode(
-                    (engine.getEngineType() == Engine.MAGLEV) ? EntityMovementMode.MAGLEV : EntityMovementMode.RAIL);
+            getSV().setMovementMode((engine.getEngineType() == Engine.MAGLEV) ?
+                                          EntityMovementMode.MAGLEV :
+                                          EntityMovementMode.RAIL);
         }
         // Make sure the engine tech rating is at least the minimum for the engine type
         if (getSV().getEngineTechRating() < engine.getTechRating()) {
@@ -416,9 +428,9 @@ public class SVStructureTab extends ITab implements SVBuildListener {
             getSV().recalculateTechAdvancement();
         }
         // Fixed Wing support vehicles require the prop mod for an electric engine
-        if ((TestSupportVehicle.SVType.getVehicleType(getSV()) == TestSupportVehicle.SVType.FIXED_WING)
-                && TestSupportVehicle.SVEngine.getEngineType(engine).electric
-                && !getSV().hasMisc(MiscType.F_PROP)) {
+        if ((TestSupportVehicle.SVType.getVehicleType(getSV()) == TestSupportVehicle.SVType.FIXED_WING) &&
+                  TestSupportVehicle.SVEngine.getEngineType(engine).electric &&
+                  !getSV().hasMisc(MiscType.F_PROP)) {
             setChassisMod(TestSupportVehicle.ChassisModification.PROP.equipment, true);
         }
         if (engine.getEngineType() != Engine.EXTERNAL) {
@@ -448,14 +460,17 @@ public class SVStructureTab extends ITab implements SVBuildListener {
 
     @Override
     public void setChassisMod(EquipmentType mod, boolean installed) {
-        final Mounted<?> current = getSV().getMisc().stream().filter(m -> m.getType().equals(mod)).findFirst()
-                .orElse(null);
+        final Mounted<?> current = getSV().getMisc()
+                                         .stream()
+                                         .filter(m -> m.getType().equals(mod))
+                                         .findFirst()
+                                         .orElse(null);
         if (installed && (null == current)) {
             try {
                 getSV().addEquipment(mod, getSV().isAero() ? FixedWingSupport.LOC_BODY : Tank.LOC_BODY);
             } catch (LocationFullException e) {
                 // This should not be possible since chassis mods don't occupy slots
-                logger.error("LocationFullException when adding chassis mod " + mod.getName());
+                logger.error("LocationFullException when adding chassis mod {}", mod.getName());
             }
         } else if (!installed && (null != current)) {
             getSV().getMisc().remove(current);
@@ -466,9 +481,10 @@ public class SVStructureTab extends ITab implements SVBuildListener {
             getEntity().setOmni(installed);
             if (!getEntity().isOmni()) {
                 getEntity().getEquipment().forEach(m -> m.setOmniPodMounted(false));
-                List<Transporter> podTransports = getEntity().getTransports().stream()
-                        .filter(t -> getEntity().isPodMountedTransport(t))
-                        .toList();
+                List<Transporter> podTransports = getEntity().getTransports()
+                                                        .stream()
+                                                        .filter(t -> getEntity().isPodMountedTransport(t))
+                                                        .toList();
                 podTransports.forEach(t -> {
                     getEntity().removeTransporter(t);
                     getEntity().addTransporter(t, false);
@@ -501,14 +517,12 @@ public class SVStructureTab extends ITab implements SVBuildListener {
         if (!(getSV() instanceof Tank)) {
             return;
         }
-        if ((turretConfig != SVBuildListener.TURRET_DUAL)
-                && !getTank().hasNoDualTurret()) {
+        if ((turretConfig != SVBuildListener.TURRET_DUAL) && !getTank().hasNoDualTurret()) {
             removeTurret(getTank().getLocTurret2());
             getTank().setHasNoDualTurret(true);
             getTank().setBaseChassisTurret2Weight(Tank.BASE_CHASSIS_TURRET_WT_UNASSIGNED);
         }
-        if ((turretConfig == SVBuildListener.TURRET_NONE)
-                && !getTank().hasNoTurret()) {
+        if ((turretConfig == SVBuildListener.TURRET_NONE) && !getTank().hasNoTurret()) {
             removeTurret(getTank().getLocTurret());
             getTank().setHasNoTurret(true);
             getTank().setBaseChassisTurretWeight(Tank.BASE_CHASSIS_TURRET_WT_UNASSIGNED);
@@ -534,12 +548,13 @@ public class SVStructureTab extends ITab implements SVBuildListener {
 
     @Override
     public void sponsonTurretChanged(boolean installed) {
-        final List<Mounted<?>> current = getSV().getMisc().stream()
-                .filter(m -> m.getType().hasFlag(MiscType.F_SPONSON_TURRET))
-                .collect(Collectors.toList());
+        final List<Mounted<?>> current = getSV().getMisc()
+                                               .stream()
+                                               .filter(m -> m.getType().hasFlag(MiscType.F_SPONSON_TURRET))
+                                               .collect(Collectors.toList());
         if (installed && current.isEmpty()) {
             try {
-                // superheavy FL/FR match L/R
+                // super heavy FL/FR match L/R
                 getSV().addEquipment(EquipmentType.get(EquipmentTypeLookup.SPONSON_TURRET), Tank.LOC_LEFT);
                 getSV().addEquipment(EquipmentType.get(EquipmentTypeLookup.SPONSON_TURRET), Tank.LOC_RIGHT);
             } catch (LocationFullException e) {
@@ -551,7 +566,10 @@ public class SVStructureTab extends ITab implements SVBuildListener {
                 m.setSponsonTurretMounted(false);
             }
             for (Mounted<?> sponson : current) {
-                getSV().getMisc().remove(sponson);
+                if (sponson instanceof MiscMounted) {
+                    getSV().getMisc().remove(sponson);
+                }
+
                 getSV().getEquipment().remove(sponson);
                 UnitUtil.removeCriticals(getSV(), sponson);
             }
@@ -567,10 +585,11 @@ public class SVStructureTab extends ITab implements SVBuildListener {
 
     @Override
     public void pintleTurretChanged(boolean addPintle, final int loc) {
-        final Optional<MiscMounted> installedPintle = getSV().getMisc().stream()
-            .filter(m -> m.is(EquipmentTypeLookup.PINTLE_TURRET))
-            .filter(m -> m.getLocation() == loc)
-            .findFirst();
+        final Optional<MiscMounted> installedPintle = getSV().getMisc()
+                                                            .stream()
+                                                            .filter(m -> m.is(EquipmentTypeLookup.PINTLE_TURRET))
+                                                            .filter(m -> m.getLocation() == loc)
+                                                            .findFirst();
         if (addPintle && installedPintle.isEmpty()) {
             try {
                 getSV().addEquipment(EquipmentType.get(EquipmentTypeLookup.PINTLE_TURRET), loc);
@@ -598,14 +617,12 @@ public class SVStructureTab extends ITab implements SVBuildListener {
     }
 
     /**
-     * Checks for the presence of sponson or pintle mounts, and if none are found
-     * resets the base chassis weight.
+     * Checks for the presence of sponson or pintle mounts, and if none are found resets the base chassis weight.
      */
     private void resetSponsonPintleWeight() {
         if (getEntity() instanceof Tank) {
             for (Mounted<?> m : getEntity().getMisc()) {
-                if (m.getType().hasFlag(MiscType.F_SPONSON_TURRET)
-                        || m.getType().hasFlag(MiscType.F_PINTLE_TURRET)) {
+                if (m.getType().hasFlag(MiscType.F_SPONSON_TURRET) || m.getType().hasFlag(MiscType.F_PINTLE_TURRET)) {
                     return;
                 }
             }
@@ -634,10 +651,12 @@ public class SVStructureTab extends ITab implements SVBuildListener {
 
     @Override
     public void fireConChanged(int index) {
-        final Mounted<?> current = getSV().getMisc().stream()
-                .filter(m -> m.getType().hasFlag(MiscType.F_BASIC_FIRECONTROL)
-                        || m.getType().hasFlag(MiscType.F_ADVANCED_FIRECONTROL))
-                .findFirst().orElse(null);
+        final Mounted<?> current = getSV().getMisc()
+                                         .stream()
+                                         .filter(m -> m.getType().hasFlag(MiscType.F_BASIC_FIRECONTROL) ||
+                                                            m.getType().hasFlag(MiscType.F_ADVANCED_FIRECONTROL))
+                                         .findFirst()
+                                         .orElse(null);
         if (null != current) {
             getSV().getMisc().remove(current);
             getSV().getEquipment().remove(current);
@@ -654,7 +673,7 @@ public class SVStructureTab extends ITab implements SVBuildListener {
                 getSV().addEquipment(eq, getSV().isAero() ? FixedWingSupport.LOC_BODY : Tank.LOC_BODY);
             } catch (LocationFullException e) {
                 // This should not be possible since fire control doesn't occupy slots
-                logger.error("LocationFullException when adding fire control " + eq.getName());
+                logger.error("LocationFullException when adding fire control {}", eq.getName());
             }
         }
         panChassis.setFromEntity(getSV());
@@ -677,13 +696,12 @@ public class SVStructureTab extends ITab implements SVBuildListener {
     }
 
     @Override
-    public void setSeating(int standard, int standardPod,
-            int pillion, int pillionPod,
-            int ejection, int ejectionPod) {
+    public void setSeating(int standard, int standardPod, int pillion, int pillionPod, int ejection, int ejectionPod) {
         // Clear out any existing seating.
-        final List<Transporter> current = getSV().getTransports().stream()
-                .filter(t -> t instanceof StandardSeatCargoBay)
-                .collect(Collectors.toList());
+        final List<Transporter> current = getSV().getTransports()
+                                                .stream()
+                                                .filter(t -> t instanceof StandardSeatCargoBay)
+                                                .toList();
         for (Transporter t : current) {
             getSV().removeTransporter(t);
         }
@@ -713,17 +731,16 @@ public class SVStructureTab extends ITab implements SVBuildListener {
     }
 
     @Override
-    public void setQuarters(int firstClass, int firstClassPod,
-            int secondClass, int secondClassPod,
-            int crew, int crewPod,
-            int steerage, int steeragePod) {
+    public void setQuarters(int firstClass, int firstClassPod, int secondClass, int secondClassPod, int crew,
+          int crewPod, int steerage, int steeragePod) {
         // Clear out any existing standard or pillion seating.
-        final List<Transporter> current = getSV().getTransports().stream()
-                .filter(t -> (t instanceof FirstClassQuartersCargoBay)
-                        || (t instanceof SecondClassQuartersCargoBay)
-                        || (t instanceof CrewQuartersCargoBay)
-                        || (t instanceof SteerageQuartersCargoBay))
-                .collect(Collectors.toList());
+        final List<Transporter> current = getSV().getTransports()
+                                                .stream()
+                                                .filter(t -> (t instanceof FirstClassQuartersCargoBay) ||
+                                                                   (t instanceof SecondClassQuartersCargoBay) ||
+                                                                   (t instanceof CrewQuartersCargoBay) ||
+                                                                   (t instanceof SteerageQuartersCargoBay))
+                                                .toList();
         for (Transporter t : current) {
             getSV().removeTransporter(t);
         }
@@ -764,25 +781,21 @@ public class SVStructureTab extends ITab implements SVBuildListener {
         }
         for (Mounted<?> mount : getTank().getEquipment()) {
             if (mount.getLocation() == loc) {
-                UnitUtil.changeMountStatus(getTank(), mount,
-                        Entity.LOC_NONE, Entity.LOC_NONE, false);
+                UnitUtil.changeMountStatus(getTank(), mount, Entity.LOC_NONE, Entity.LOC_NONE, false);
             }
         }
     }
 
     private void initTurretArmor(int loc) {
         getTank().initializeArmor(0, loc);
-        getTank().setArmorTechLevel(
-                getTank().getArmorTechLevel(Tank.LOC_FRONT),
-                loc);
-        getTank().setArmorType(getTank().getArmorType(Tank.LOC_FRONT),
-                loc);
+        getTank().setArmorTechLevel(getTank().getArmorTechLevel(Tank.LOC_FRONT), loc);
+        getTank().setArmorType(getTank().getArmorType(Tank.LOC_FRONT), loc);
     }
 
     @Override
     public void fuelTonnageChanged(double tonnage) {
         double fuelTons = TestEntity.round(tonnage,
-                TestEntity.usesKgStandard(getSV()) ? TestEntity.Ceil.KILO : TestEntity.Ceil.HALFTON);
+              TestEntity.usesKgStandard(getSV()) ? TestEntity.Ceil.KILO : TestEntity.Ceil.HALFTON);
         if (getSV().isAero()) {
             getAero().setFuelTonnage(fuelTons);
         } else {
@@ -825,15 +838,11 @@ public class SVStructureTab extends ITab implements SVBuildListener {
     }
 
     /**
-     * Convenience method that removes the fuel if the vehicle does not require fuel
-     * mass
-     * then refreshes the fuel panel. Changes that can affect this are vehicle type,
-     * engine
-     * type, and the prop chassis mod.
+     * Convenience method that removes the fuel if the vehicle does not require fuel mass then refreshes the fuel panel.
+     * Changes that can affect this are vehicle type, engine type, and the prop chassis mod.
      */
     private void refreshFuel() {
-        if ((getSV() instanceof FixedWingSupport)
-                && (((FixedWingSupport) getSV()).kgPerFuelPoint() == 0)) {
+        if ((getSV() instanceof FixedWingSupport) && (((FixedWingSupport) getSV()).kgPerFuelPoint() == 0)) {
             getAero().setFuelTonnage(0);
         } else if ((getSV() instanceof Tank) && (getTank().fuelTonnagePer100km() == 0)) {
             getTank().setFuelTonnage(0);
